<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="title_activity_register">register</string>
    <string name="email">Email:</string>
    <string name="number">Number:</string>
    <string name="name">Name:</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_logged_in">LoggedIn</string>

</resources>
